--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -344,6 +344,7 @@ footer{
     grid-column: 1/-1;
     background-color: transparent;
     padding: 0;
+    font-size: clamp(0.75rem, 0.6528rem + 0.4444vw, 1rem);
 }
 
 .title--h4{
@@ -709,7 +710,7 @@ button:hover{
 
 /* footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer*/
 .foot_cs{
-    background-color: rgba(24, 24, 24, 0.5);
+    background-color: rgba(0,0,0, 0.4);
     padding-top: clamp(0.75rem, 0.5069rem + 1.1111vw, 1.375rem);
 }
 
@@ -837,7 +838,8 @@ button:hover{
     }
 
     .p--copy{
-        grid-column: 1/4;
+        grid-column: 1/-1;
+        justify-self: center;
     }
 
     .socials{
@@ -955,10 +957,6 @@ button:hover{
         margin-right: 20px;
         text-align: right;
         margin-left: auto;
-    }
-
-    .p--copy{
-        grid-column: 1/4;
     }
 
     .socials{
