--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -829,18 +829,22 @@ button:hover{
     .div--footer{
         grid-column: 1/-3;
     }
- 
-    .p--credits{
-        grid-column: 6/-1;
-        margin-top: 20px;
-        margin-right: 20px;
-        text-align: right;
-    }
 
-    .p--copy{
-        grid-column: 1/-1;
-        justify-self: center;
-    }
+.p--copy{
+  grid-column: 1/-1;
+  justify-self: center;
+  margin: 0;
+  white-space: nowrap;
+  margin: 20px;
+}
+
+.p--credits{
+  grid-column: 6/-1;
+  grid-row: 2/-1;
+  margin: 20px;
+  justify-self: center;
+  position: absolute;
+}
 
     .socials{
         grid-column: 3/-1;
