--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1548,8 +1548,8 @@ button:hover{
         left: 40px;
         width: 80px;
         height: 80px;
-        cursor: pointer;
         z-index: 25;
+        margin-left: 80px;
         display: flex;
         align-items: center;
         justify-content: center;
