--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -49,34 +49,35 @@ p{
     line-height: 140%;
     grid-column:1/-1 ;
     background-color: rgba(0, 22, 51, 0.8);
-    font-weight: 200;
+    font-weight: 600;
 }
 
 a{
     color: #fafafa;
+    font-weight: 700;
 }
+
 .p--nav{
     color: #121212;
 }
-.menu{
-  position: fixed;
-  top: 0; left: 0; right: 0;          /* fixe la référence */
-  height: 62px;
-  display: flex;
-  width: 100%;
-  background-color: #fafafa;
-  align-items: center;
-  z-index: 20;
 
-  transform: translateY(0);
-  transition: transform .6s ease-in-out, opacity .6s ease-in-out;
-  will-change: transform, opacity;
+.menu{
+    position: fixed;
+    top: 0; left: 0; right: 0;
+    height: 62px;
+    display: flex;
+    width: 100%;
+    background-color: #fafafa;
+    align-items: center;
+    z-index: 20;
+    transform: translateY(0);
+    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+    will-change: transform, opacity;
 }
 
 .menu--hidden{
-  /* retire top:-100px */
-  transform: translateY(-100%);       /* ou calc(-100% - 20px) si tu veux aller un peu plus haut */
-  opacity: 0;
+    transform: translateY(-100%);
+    opacity: 0;
 }
 
 .menu__btn{
@@ -297,6 +298,14 @@ a{
     padding-right: 10px;
     align-self: start;
     background-color: transparent;
+}
+
+h3{
+    font-weight: 700;
+}
+
+.p--presproj{
+    font-weight: 300;
 }
 
 /* footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer*/
@@ -838,21 +847,21 @@ button:hover{
         grid-column: 1/-3;
     }
 
-.p--copy{
-  grid-column: 1/-1;
-  justify-self: center;
-  margin: 0;
-  white-space: nowrap;
-  margin: 20px;
-}
+    .p--copy{
+        grid-column: 1/-1;
+        justify-self: center;
+        margin: 0;
+        white-space: nowrap;
+        margin: 20px;
+    }
 
-.p--credits{
-  grid-column: 6/-1;
-  grid-row: 2/-1;
-  margin: 20px;
-  justify-self: center;
-  position: absolute;
-}
+    .p--credits{
+        grid-column: 6/-1;
+        grid-row: 2/-1;
+        margin: 20px;
+        justify-self: center;
+        position: absolute;
+    }
 
     .socials{
         grid-column: 3/-1;
