--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -482,7 +482,7 @@ span{
 }
 
 .img--sent{
-  grid-column: 2 / -2;
+  grid-column: 1/-1;
   width: 100%;
   border-radius: 25px;
   display: block;
@@ -614,6 +614,14 @@ button:hover{
     gap: 2rem;
 }
 
+.footer--liste__cs{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
 // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // case study
 
 .scroll-down{
@@ -737,17 +745,14 @@ button:hover{
 
 
 /* footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer footer*/
-.foot_cs{
-    background-color: rgba(0,0,0, 0.4);
-    padding-top: clamp(0.75rem, 0.5069rem + 1.1111vw, 1.375rem);
-}
-
 .foot__cs{
     display: grid; 
     column-gap: 16px;
     background: radial-gradient(circle at center, #1e1e1e 0%, #121212 100%);
     height: 300px;
     margin-top: 25px;
+    background-color: rgba(0,0,0, 0.4);
+    padding-top: clamp(0.75rem, 0.5069rem + 1.1111vw, 1.375rem);
 }
 
 .footer--liste__cs{
@@ -1068,6 +1073,10 @@ button:hover{
     p{
         grid-column: 2/-2;
     }
+
+    .custom-cursor2,.custom-cursor{
+        display: none;
+    }
 }
 @media (min-width: 1250px){
 // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // portfolio
@@ -1076,6 +1085,7 @@ button:hover{
     }
 
     .custom-cursor{
+        display: block;
         position: fixed;
         width: 16px;
         height: 16px;
@@ -1094,6 +1104,7 @@ button:hover{
     }
     .custom-cursor2{
         position: fixed;
+        display: block;
         width: 64px;
         height: 64px;
         background-image: url("../assets/images/img_df/bird_icon.svg");
