--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -722,7 +722,6 @@ button:hover{
 .btn--projet, .btn--suiv, .btn--ret{
     grid-column: 1/-1;
     text-align: center;
-    margin-top: 80px;
     padding: 9px;
     background-color: #fafafa;
     color: #2b3553;
@@ -730,12 +729,17 @@ button:hover{
     transition: all .3s;
     margin-bottom: 20px;
 }
-.btn--suiv{
-    grid-column: 4/-1;
+
+.btn--projet{
+    background-color: #f4b942;
+    color: white;
 }
 
-.btn--ret{
-    grid-column: 1/3;
+.btn--ret, .btn--suiv {
+    display: inline-flex ;
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
 }
 
 .btn--projet:hover, .btn--suiv:hover, .btn--ret:hover{
