--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -976,11 +976,12 @@ button:hover{
     .btn--ret{
         grid-column: 1/4;
     }
+
     #see, #back, #next{
         margin-top: 0px;
         margin-bottom: 0px;
     }
-    
+
     .gridcol{
         grid-template-columns: repeat(7, 1fr);
         column-gap: 20px;
@@ -1087,6 +1088,14 @@ button:hover{
 // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // // TFA
     .img--falcon__cs{
         filter: drop-shadow(0 0 5px #fafafa);
+        display: inline-block;
+        animation: falcon-fly 3s ease-in-out infinite;
+    }
+
+    @keyframes falcon-fly {
+        0%   { transform: translateY(0); }
+        50%  { transform: translateY(-16px); }
+        100% { transform: translateY(0); }
     }
 
     .img--capt, .detail_cam{
@@ -1528,6 +1537,17 @@ button:hover{
         grid-row: 2/6;
         width: 100%;
         margin: 0;
+    }
+
+    .img--analyse {
+        display: inline-block;
+        animation: analyse-move 3s ease-in-out infinite;
+    }
+
+    @keyframes analyse-move {
+        0%   { transform: translateX(0); }
+        50%  { transform: translateX(-16px); }
+        100% { transform: translateX(0); }
     }
 
     .p--chiffre__prux{
