--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -702,6 +702,7 @@ button:hover{
     grid-column: 1/-1;
     justify-self: center;
     animation: analyse-move 3s ease-in-out infinite;
+    margin-bottom: 23px;
 }
 
 @keyframes analyse-move{
