--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -773,7 +773,7 @@ button:hover{
     margin-bottom : 18px;
 }
 
-#next{
+#suiv{
     margin-bottom: 64px;
 }
 
@@ -993,7 +993,7 @@ button:hover{
         grid-column: 1/4;
     }
 
-    #see, #back, #next{
+    #see, #back, #suiv{
         margin-top: 0px;
         margin-bottom: 0px;
     }
